--- a/.coveragerc
+++ b/.coveragerc
@@ -1,12 +1,12 @@
 [run]
 branch = True
-source = METE0R_PACKAGE
+source = ktug_hanyang_pua
 
 [paths]
 source =
-	src/METE0R_PACKAGE
-	.tox/*/lib/python*/site-packages/METE0R_PACKAGE
-	.tox/pypy*/site-packages/METE0R_PACKAGE
+	src/ktug_hanyang_pua
+	.tox/*/lib/python*/site-packages/ktug_hanyang_pua
+	.tox/pypy*/site-packages/ktug_hanyang_pua
 
 
 [html]
