--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,14 +10,14 @@ parts=
 recipe =
 	zc.recipe.egg
 eggs =
-	METE0R-PROJECT
+	ktug-hanyang-pua
 
 
 [deployment]
 recipe =
 	zc.recipe.deployment
 name =
-	METE0R-PROJECT
+	ktug-hanyang-pua
 user =
 	${whoami:user}
 etc-user =
