--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ language: python
 sudo: false
 matrix:
   include:
-  - python: '2.7'
-    env: TOXENV=py27
-  - python: '3.4'
-    env: TOXENV=py34
-  - python: pypy
-    env: TOXENV=pypy
+  - python: '3.8'
+    env: TOXENV=py38
+  - python: 'pypy3'
+    env: TOXENV=pypy3
 install:
 - pip install -U setuptools pip wheel "tox>=3.4.0" python-coveralls
 script:
